hr overlap fix

--- a/Project 1/css/style.css
+++ b/Project 1/css/style.css
@@ -42,7 +42,7 @@
 
 .orarend {
     width: 90vw;
-    height: 90vh;
+    height: fit-content;
     align-self: center;
     background-color: aliceblue;
     opacity: 0.5;
@@ -83,6 +83,7 @@ h1 {
 
 
 hr {
+    margin-top: 20px;
     border: 2px black solid;
 }
 
@@ -132,6 +133,7 @@ h2 {
 
 .hetvege {
     margin-top: 30px;
+    margin-bottom: 30px;
     height: 20%;
     width: 100%;
     display: flex;
